--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "projeto_biblioteca",
+  "name": "rojeto_biblioteca",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/app.js",
     "build": "npx tsc",
-    "dev": "ts-node src/app.ts"
+    "start": "node dist/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "description": "",
   "dependencies": {
     "@types/express": "^5.0.2",
-    "@types/node": "^22.15.25",
+    "@types/node": "^22.15.21",
     "express": "^5.1.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
